--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@apollo/federation": "^0.10.2",
-    "@apollo/gateway": "^0.10.8",
-    "apollo-server": "^2.9.7",
-    "concurrently": "^5.0.0",
-    "nodemon": "^1.19.4"
+    "@apollo/federation": "0.24.0",
+    "@apollo/gateway": "0.28.0",
+    "apollo-server": "2.24.0",
+    "concurrently": "6.1.0",
+    "graphql": "15.5.0",
+    "nodemon": "2.0.7"
   },
   "scripts": {
-    "watch-s1": "nodemon server1/index.js -w server1/",
-    "watch-s2": "nodemon server2/index.js -w server2/",
-    "watch-gw": "nodemon gateway/index.js -w gateway/",
-    "watch": "concurrently \"npm:watch-*\""
+    "watch-s1": "nodemon service1-users/index.js",
+    "watch-s2": "nodemon service2-articles/index.js",
+    "watch-s3": "nodemon service3-comments/index.js",
+    "watch-gw-apollo": "nodemon gateway-apollo/index.js",
+    "watch-gw-mesh": "nodemon -w ./gateway-mesh --exec 'cd ./gateway-mesh && yarn serve'",
+    "watch": "concurrently \"npm:watch-*\"",
+    "start:services": "concurrently \"npm:watch-s*\"",
+    "start:apollo": "y watch-gw-apollo",
+    "start:mesh": "y watch-gw-mesh"
   }
 }
