--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "watch-s1": "nodemon service1-users/index.js",
     "watch-s2": "nodemon service2-articles/index.js",
     "watch-s3": "nodemon service3-comments/index.js",
-    "watch-gw-apollo": "nodemon gateway-apollo/index.js",
-    "watch-gw-mesh": "nodemon -w ./gateway-mesh --exec 'cd ./gateway-mesh && yarn serve'",
+    "watch-gw-apollo": "sleep 2 && nodemon gateway-apollo/index.js",
+    "watch-gw-mesh": "sleep 2 && nodemon -w ./gateway-mesh --exec 'cd ./gateway-mesh && yarn serve'",
     "watch": "concurrently \"npm:watch-*\"",
     "start:services": "concurrently \"npm:watch-s*\"",
     "start:apollo": "y watch-gw-apollo",
