fix: introspectionCache for graphql-mesh
@see https://github.com/Urigo/graphql-mesh/issues/2123#issuecomment-837197007

--- a/gateway-mesh/package.json
+++ b/gateway-mesh/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-mesh/cli": "^0.29.11",
-    "@graphql-mesh/graphql": "^0.17.6",
+    "@graphql-mesh/graphql": "0.17.7-alpha-66d9b22d6.0",
     "@graphql-mesh/merger-federation": "^0.8.38",
     "@graphql-mesh/transform-federation": "^0.5.13",
     "graphql": "^15.5.0"
